# scratchcpp-render

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  utests.yml
ScratchCPPGui/: CMakeLists.txt  ProjectPlayer.qml  irenderedtarget.h  keyeventhandler.cpp  keyeventhandler.h  mouseeventhandler.cpp  mouseeventhandler.h  projectloader.cpp  projectloader.h  projectscene.cpp  projectscene.h  renderedtarget.cpp  renderedtarget.h  scenemousearea.cpp  scenemousearea.h  spritemodel.cpp  spritemodel.h  stagemodel.cpp  stagemodel.h  targetpainter.cpp  targetpainter.h
include/scratchcpp-render/: scratchcpp-render.h
src/: CMakeLists.txt  ProjectPlayer.qml  bitmapskin.cpp  bitmapskin.h  cputexturemanager.cpp  cputexturemanager.h  effecttransform.cpp  effecttransform.h  global.h  global_functions.cpp  graphicseffect.cpp  graphicseffect.h  ipenlayer.h  irenderedtarget.h  keyeventhandler.cpp  keyeventhandler.h  listmonitorlistmodel.cpp  listmonitorlistmodel.h  listmonitormodel.cpp  listmonitormodel.h  monitormodel.cpp  monitormodel.h  mouseeventhandler.cpp  mouseeventhandler.h  penattributes.h  penlayer.cpp  penlayer.h  penlayerpainter.cpp  penlayerpainter.h  penstate.h  projectloader.cpp  projectloader.h  projectscene.cpp  projectscene.h  renderedtarget.cpp  renderedtarget.h  scenemousearea.cpp  scenemousearea.h  shadermanager.cpp  shadermanager.h  (+20 more)
src/blocks/: penblocks.cpp  penblocks.h  penextension.cpp  penextension.h
src/internal/: ListMonitor.qml  MonitorSlider.qml  Question.qml  TextBubble.qml  ValueMonitor.qml
src/shaders/: sprite.frag  sprite.vert
test/: CMakeLists.txt  clones.sb3  common.h  stamp_env.sb3
test/blocks/: CMakeLists.txt  pen_blocks_test.cpp  penextension_test.cpp  util.cpp  util.h
test/effecttransform/: CMakeLists.txt  effecttransform_test.cpp
test/global_functions/: CMakeLists.txt  global_functions_test.cpp
test/graphicseffect/: CMakeLists.txt  graphicseffect_test.cpp
test/keyeventhandler/: CMakeLists.txt  keyeventhandler_test.cpp
test/mocks/: CMakeLists.txt  blocksectionmock.h  enginemock.h  extensionmock.h  penlayermock.h  renderedtargetmock.h
test/monitor_models/: CMakeLists.txt  listmonitorlistmodel_test.cpp  listmonitormodel_test.cpp  monitormodel_test.cpp  valuemonitormodel_test.cpp
test/mouseeventhandler/: CMakeLists.txt  fakerepeater.cpp  fakerepeater.h  mouseeventhandler_test.cpp
test/penattributes/: CMakeLists.txt  penattributes_test.cpp
test/penlayer/: CMakeLists.txt  penlayer_test.cpp
test/penlayerpainter/: CMakeLists.txt  penlayerpainter_test.cpp
test/penstate/: CMakeLists.txt  penstate_test.cpp
test/projectloader/: CMakeLists.txt  projectloader_test.cpp
test/projectscene/: CMakeLists.txt  projectscene_test.cpp
test/renderedtarget/: CMakeLists.txt  renderedtarget_test.cpp
test/scenemousearea/: CMakeLists.txt  scenemousearea_test.cpp
test/shadermanager/: CMakeLists.txt  shadermanager_test.cpp
test/skins/: CMakeLists.txt  bitmapskin_test.cpp  svgskin_test.cpp
test/target_models/: CMakeLists.txt  spritemodel_test.cpp  stagemodel_test.cpp  targetmodel_test.cpp
test/targetpainter/: CMakeLists.txt  targetpainter_test.cpp
test/textbubblepainter/: CMakeLists.txt  textbubblepainter_test.cpp
test/textbubbleshape/: CMakeLists.txt  textbubbleshape_test.cpp
test/texture/: CMakeLists.txt  cputexturemanager_test.cpp  texture_test.cpp
